--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.9",
     "nodemon": "^3.0.3",
+    "otp-generator": "^4.0.1",
     "swagger": "^0.7.5",
     "swagger-ui-express": "^5.0.0",
     "winston": "^3.11.0"
